# ChangeLog for net-mail/mailman
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/mailman/ChangeLog,v 1.9 2003/02/17 08:39:30 aliz Exp $

*mailman-2.1.1 (17 Feb 2003)

  Daniel Ahlberg <aliz@gentoo.org> :
  Security update.

*mailman-2.1 (21 Jan 2003)

  03 Feb 2003; Nick Hadaway <raker@gentoo.org> mailman-2.1.ebuild,
  files/sendmail.rc :
  Added an rc file.

  21 Jan 2003; Nick Hadaway <raker@gentoo.org> mailman-2.1.ebuild,
  files/digest-mailman-2.1 :
  Version bump.  Added some logic to keep the old mm_cfg.py as requested
  in bug #12589

*mailman-2.0.12 (16 Jul 2002)

  04 Jan 2002; Martin Holzer <mholzer@gentoo.org> mailman-2.0.1.2.ebuild ChangeLog :
  Fixed einfo text. This closes #13078.

  16 Jul 2002; Ben Lutgens <lamer@gentoo.org> mailman-2.0.1.2.ebuild,
  ChangeLog, files/digest-mailman-2.0.2.1, files/mailman.conf,
  files/README.gentoo :

  Brand new package, based on submission by Joby Walker
