@@ -1,8 +1,8 @@
-MD5 7757a6629b6804dd4af0e724dd3c92ea ChangeLog 995
+MD5 77cbea256591042d76bef2d6d3baaa41 ChangeLog 1159
 MD5 ea28f9c1907e2ce2ded3f9322ff2e38d mailman-2.0.12.ebuild 2083
 MD5 56d0300c139c8e9d0db16c662ca92f59 mailman-2.1.1.ebuild 2482
 MD5 a7700a2cb6070e1977b8f9ef790c67ad mailman-2.1.ebuild 2489
-MD5 c4f9507d89f6c62a7de206fa141e6d46 mailman-2.1.1-r1.ebuild 2706
+MD5 ce6937efe1b9b2c81907050e31e34378 mailman-2.1.1-r1.ebuild 2712
 MD5 ff41a2443653c601e2f80dcb5a87b004 files/README.gentoo 1368
 MD5 55be2eab933580039c9feb4796c3bcf9 files/digest-mailman-2.0.12 63
 MD5 2172743b0a9160821702fe304a875392 files/digest-mailman-2.1 61
