@@ -1,0 +1,1 @@
+MD5 7f7cdc52a40a17a2c7ee91c5f4dd675d mailman-2.1.1.tgz 5473754
