@@ -1,6 +1,12 @@
 # ChangeLog for net-mail/mailman
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/mailman/ChangeLog,v 1.9 2003/02/17 08:39:30 aliz Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/mailman/ChangeLog,v 1.10 2003/04/18 22:44:25 mholzer Exp $
+
+*mailman-2.1.1-r1 (18 Apr 2003)
+
+  18 Apr 2003; Martin Holzer <mholzer@gentoo.org> Manifest,
+  mailman-2.1.1-r1.ebuild:
+  Adding contrib stuff. Closes #18425.
 
 *mailman-2.1.1 (17 Feb 2003)
 
